--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TOP Recipe Project</title>
 </head>
 <body>
-    
+    <header class="header-section">
+        <h1 class="header__title">TOP Recipe Project</h1>
+    </header>
 </body>
 </html>
