Added instructions and imae to lasasgna recipe

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP Recipe Project</title>
 </head>
@@ -10,7 +11,7 @@
     </header>
 
     <main>
-        <a href="/odin-recipes/lasagna.html">Lasagna Recipe</a>
+        <a class="lasagna-link" href="/odin-recipes/lasagna.html">Lasagna Recipe</a>
     </main>
 </body>
 </html>
