--- a/odin-recipes/lasagna.html
+++ b/odin-recipes/lasagna.html
@@ -1,39 +1,44 @@
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Lasagna Recipe</title>
 </head>
 
 
 
 <body>
+    <div class="main-container">
+        <header class="header-section">
+            <h1 class="header__title">Lasagna Recipe</h1>
+            <img class="lasagna__img" src="/Assets/lasagna-img.jpg" alt="Lasagna Dish">
+        </header>
 
-    <header>
-        <h1>Lasagna Recipe</h1>
-        <img class="lasagna-img" src="/Assets/lasagna-img.jpg" alt="Lasagna Dish">
-    </header>
+        <main class="main-section">
+            <h2 class="main__title">Description</h2>
+            <h4 class="main__subtitle">Ingredients</h4>
+            <ul class="main__ing">
+                <li>1 (16oz) package lasagna noodles</li>
+                <li>1 pound lean ground beef</li>
+                <li>salt and pepper to taste</li>
+                <li>1 (16oz) jar spaghetti sauce</li>
+                <li>1 clove garlic, minced</li>
+                <li>1/2 pound shredded mozzarella cheese</li>
+                <li>1/2 pound shredded cheddar cheese</li>
+                <li>1 pint ricotta cheese</li>
+            </ul>
+            <h2 class="main__title">Directions</h2>
+            <ol class="main__dir">
+                <li>Bring large pot of lightly salted water to a boil. Add pasta and cook for 8-10 minutes, then drain</li>
+                <li>Preheat oven to 175 degrees celsius. In a large skillet over medium-high heat, brown beef and season with salt and pepper; drain. Stir in spaghetti sauce and garlic and simmer 5 minutes</li>
+                <li>In a medium bowl, combine mozzarella, cheddar and ricotta; stir well. In large pan, alternate layers of noodles, meat mixture and cheese mixture until pan is finished.</li>
+                <li>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</li>
+            </ol>
+        </main>
 
-    <main>
-        <h2>Description</h2>
-        <h4>Ingredients</h4>
-        <ul>
-            <li>1 (16oz) package lasagna noodles</li>
-            <li>1 pound lean ground beef</li>
-            <li>salt and pepper to taste</li>
-            <li>1 (16oz) jar spaghetti sauce</li>
-            <li>1 clove garlic, minced</li>
-            <li>1/2 pound shredded mozzarella cheese</li>
-            <li>1/2 pound shredded cheddar cheese</li>
-            <li>1 pint ricotta cheese</li>
-        </ul>
-        <h2>Directions</h2>
-        <ol>
-            <li>Bring large pot of lightly salted water to a boil. Add pasta and cook for 8-10 minutes, then drain</li>
-            <li>Preheat oven to 175 degrees celsius. In a large skillet over medium-high heat, brown beef and season with salt and pepper; drain. Stir in spaghetti sauce and garlic and simmer 5 minutes</li>
-            <li>In a medium bowl, combine mozzarella, cheddar and ricotta; stir well. In large pan, alternate layers of noodles, meat mixture and cheese mixture until pan is finished.</li>
-            <li>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</li>
-        </ol>
-    </main>
+        <footer>
+            <a href="/index.html">Back to Home</a>
+        </footer>
+    </div>
     
-
+    
 </body>
