--- a/odin-recipes/guacamole.html
+++ b/odin-recipes/guacamole.html
@@ -3,3 +3,41 @@
     <link rel="stylesheet" href="/css/style.css">
     <title>Guacamole Recipe</title>
 </head>
+
+<body>
+    <div class="main-container">
+        <header class="header-section">
+            <h1 class="header__title">Guacamole Recipe</h1>
+            <img class="guac__img" src="/Assets/guacamole.jpg" alt="bowl of guacamole">
+        </header>
+        <main class="main-section">
+
+            <h2 class="main__title">Description</h2>
+            <h4 class="main__subtitle">Ingredients</h4>
+            <ul class="main-ing">
+                <li>3 avocados</li>
+                <li>1 lime, juiced</li>
+                <li>1 tsp salt</li>
+                <li>1/2 cup diced onion</li>
+                <li>3 tbsp cilantro</li>
+                <li>2 plum tomatoes, diced</li>
+                <li>1 tsp minced garlic</li>
+                <li>1 pinch cayenne pepper</li>
+            </ul>
+
+
+            <h2 class="main__title">Directions</h2>
+            <ol class="main__dir">
+                <li>Mash together the avocados, lime juice, and salt into medium bowl</li>
+                <li>Mix in onion, cilantro, tomatoes, and garlic </li>
+                <li>Refrigerate 1 hour for best flavour</li>
+            </ol>
+        </main>
+        <footer>
+            <a href="/index.html">Back to Home</a>
+        </footer>
+
+    </div>
+   
+    
+</body>
