--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP Recipe Project</title>
 </head>
@@ -10,8 +10,12 @@
         <h1 class="header__title">Odin Recipes</h1>
     </header>
 
-    <main>
-        <a class="lasagna-link" href="/odin-recipes/lasagna.html">Lasagna Recipe</a>
+    <main class="main-section">
+        <ul>
+            <li><a class="link" href="/odin-recipes/guacamole.html">Guacamole Recipe</a></li>
+            <li><a class="link" href="/odin-recipes/lasagna.html">Lasagna Recipe</a></li>
+        </ul>
+        
     </main>
 </body>
 </html>
